; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb3/extr_cxgb3_offload.c_do_bad_cpl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/chelsio/cxgb3/extr_cxgb3_offload.c_do_bad_cpl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.t3cdev = type { i32 }
%struct.sk_buff = type { i32* }

@.str = private unnamed_addr constant [35 x i8] c"%s: received bad CPL command 0x%x\0A\00", align 1
@CPL_RET_BUF_DONE = common dso_local global i32 0, align 4
@CPL_RET_BAD_MSG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.t3cdev*, %struct.sk_buff*)* @do_bad_cpl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_bad_cpl(%struct.t3cdev* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.t3cdev*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  store %struct.t3cdev* %0, %struct.t3cdev** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %5 = load %struct.t3cdev*, %struct.t3cdev** %3, align 8
  %6 = getelementptr inbounds %struct.t3cdev, %struct.t3cdev* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %9 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @pr_err(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %11)
  %13 = load i32, i32* @CPL_RET_BUF_DONE, align 4
  %14 = load i32, i32* @CPL_RET_BAD_MSG, align 4
  %15 = or i32 %13, %14
  ret i32 %15
}

declare dso_local i32 @pr_err(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
